--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,22 @@
 body {
-  font: 10px Arial, Helvetica, sans-serif;
+  font: 16px Arial, Helvetica, sans-serif;
   margin: 20px;
+  text-align: left;
+}
+
+table {
+  border-collapse: collapse;
+  border: 1px solid black;
+}
+
+tr:nth-child(even) {
+  background-color: lightgray;
+}
+
+td {
+  text-align: right;
+}
+
+th, td {
+  padding: 3px;
 }
