--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   font: 16px Arial, Helvetica, sans-serif;
+  color: black;
   margin: 20px;
   text-align: left;
 }
@@ -19,4 +20,16 @@ td {
 
 th, td {
   padding: 3px;
+}
+
+input {
+  text-align: right;
+  font-size: 16px;
+  border: 0;
+  padding: 0;
+  background: transparent;
+}
+
+::-webkit-input-placeholder {
+  color: black;
 }
