--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,20 @@
 body {
   font: 16px Arial, Helvetica, sans-serif;
-  color: black;
+  color: darkgray;
   margin: 20px;
   text-align: left;
+  background: black;
+  min-width: 620px;
 }
 
 table {
   border-collapse: collapse;
-  border: 1px solid black;
+  border: 1px solid #666;
+  margin: 0;
 }
 
 tr:nth-child(even) {
-  background-color: lightgray;
+  background-color: #333;
 }
 
 td {
@@ -28,8 +31,39 @@ input {
   border: 0;
   padding: 0;
   background: transparent;
+  color: darkgray;
 }
 
 ::-webkit-input-placeholder {
+  color: darkgray;
+}
+
+nav {
+  float: left;
+  height: 100vh;
+  margin-right: 20px;
+}
+
+ol {
+  list-style: none;
+  text-indent: 0;
+  padding: 0;
+}
+
+form {
+  max-width: 155px;
+}
+
+nav input {
+  text-align: left;
+  font-size: 13.3px;
+  padding: 1px;
+  background: white;
+  width: 100%;
+  margin: 1px 0;
+  color: black;
+}
+
+nav ::-webkit-input-placeholder {
   color: black;
 }
